# mcp-netbox

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTORS.md  CURRENT_SESSION_STATUS.md  DCIM_CAPABILITIES.md  DESIGN.md  DEVELOPMENT_PHASE.md  Dockerfile  GITHUB_ISSUES.md  IPAM_CAPABILITIES.md  ISSUES_FOUND_DURING_TESTING.md  LICENSE  LIST_ALL_TOOLS_ISSUE.md  README.md  REGISTRY_BRIDGE_ISSUE.md  ROADMAP.md  TESTING_TODOS_BACKUP.md  TEST_INSTRUCTIONS_EXPAND_PARAMETERS.md  answer-from-gemini.md  ask-gemini-issue13.md  ask-gemini.md  cable_connection_report_20250622_221426.json  claude.md  debug_content_types.py  debug_interface_object.py  debug_ip_formats.py  debug_tenant_resources.py  decommission_report_test-sw-20250622-183126_20250622_214129.json  demo_rir_creation.py  demo_self_describing_api.py  docker-compose.async.yml  docker-compose.yml  duplicate_ips_test_basic_analysis_20250623_040051.json  duplicate_ips_test_bulk_analysis_20250623_040051.json  duplicate_ips_test_comprehensive_suite_20250623_040052.json  duplicate_ips_test_error_handling_20250623_040051.json  duplicate_ips_test_validation_20250623_040052.json  ip_allocation_report_20250622_222435.json  ipam_tools_extension.py  (+59 more)
.claude/: PROJECT_CONTEXT.md
.claude/commands/: commit.md
.github/workflows/: docker-publish.yml
chatbox/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  README.md
chatbox/docs/: API_DESIGN.md  CONTEXT_SYSTEM.md  DEPLOYMENT.md  GIT_BRANCH_STRATEGY.md  INTEGRATION.md  TESTING_STRATEGY.md
chatbox/examples/: integration-example.js  testing-examples.js
chatbox/planning/: COMPONENTS.md  PHASES.md  TIMELINE.md
chatbox/scripts/: git-branch-helper.sh
docs/: CLAUDE.md  CLI_REPLACEMENT_CHECKLIST.md  DESIGN.md  DEVELOPMENT-GUIDE.md  GIT_BRANCH_STRATEGY.md  PHASE3_CLI_TESTING.md  PHASE3_LANGGRAPH_TESTING.md  PHASE3_OPENAI_ORCHESTRATION.md  PHASE3_PROGRESS.md  README.md  ROADMAP.md  TECH_STACK.md  ask-gemini-43.md  ask-gemini-44.md  ask-gemini-code-review.md  ask_gemini_47.md  ask_gemini_mcp_parameter.md  auto-context-configuration.md  bridget-auto-context-implementation-summary.md  circuits-tools-implementation.md  code-cleanup-summary.md  fix_this_code.md  howto_fix_bug_gemini.md  module_management_bugfix_test_plan.md  modules_status_overview.md
docs/architecture/: AGENT_SYSTEM.md
netbox_mcp/: __init__.py  __main__.py  _version.py  cli_phase3.py  client.py  config.py  dependencies.py  exceptions.py  logging_config.py  monitoring.py  openapi_generator.py  registry.py  secrets.py  server.py  tasks.py  worker.py
netbox_mcp/agents/: __init__.py  base.py  config.py  conversation_manager.py  intent_recognition.py  response_generation.py  task_planning.py  tool_coordination.py
netbox_mcp/coordination/: __init__.py
netbox_mcp/orchestration/: __init__.py  cache.py  coordination.py  limitations.py  state_machine.py
netbox_mcp/persona/: __init__.py  bridget.py  bridget_context.py  bridget_i18n.py  message_templates.py
netbox_mcp/persona/locales/: __init__.py  (+2 more)
netbox_mcp/prompts/: __init__.py  context_prompts.py  workflows.py
netbox_mcp/tools/: __init__.py  dcim_tools.py  ipam_tools.py  system_tools.py  tenancy_tools.py
netbox_mcp/validation/: __init__.py  validators.py
tests/: __init__.py  test_async_tasks.py  test_auto_initialization.py  test_bridget_context.py  test_bulk_cable_creation.py  test_bulk_device_tool.py  test_cable_color_support.py  test_client.py  test_config.py  test_context_prompts.py  test_ensure_operations.py  test_interface_mapping.py  test_selective_field_comparison.py  test_server.py  test_two_pass_strategy.py  test_workflow_prompts.py  test_write_operations.py
(+49 files in other folders)
